[package]
name = "iced_baseview"
version = "0.0.3"
authors = [
  "Billy Messenger <BillyDM@protonmail.com>",
  "Robbert van der Helm <mail@robbertvanderhelm.nl>",
  "Joakim Frostegård <joakim.frostegard@gmail.com>",
]
edition = "2021"
description = "A baseview runtime for Iced"
license = "MIT"
repository = "https://github.com/BillyDM/iced_baseview"
documentation = "https://docs.rs/iced_baseview"
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
categories = ["gui"]

[features]
# Enables a debug view in native platforms (press F12)
debug = [] # TODO: "iced_runtime/debug"
# Enable the wgu renderer
wgpu = []   # TODO: "iced_renderer/wgpu"
image = []  # TODO: "iced_widget/image"
svg = []    # TODO: "iced_widget/svg"
canvas = [] # TODO: "iced_widget/canvas"

[dependencies]
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "fdb43ea" }
cfg-if = "1"
copypasta = "0.8"
# iced_runtime = "0.1"
# iced_renderer = "0.1"
# iced_graphics = "0.9"
# iced_style = "0.9"
# iced_widget = "0.1"
keyboard-types = { version = "0.6", default-features = false }
log = "0.4"
raw-window-handle = "0.5"
thiserror = "1.0"
iced = { version = "0.10.0", default-features = false, features = [
  "wgpu",
  "advanced",
] }
iced_runtime = "0.1.1"
iced_renderer = "0.1.0"
iced_graphics = "0.9.0"
iced_core = "0.10.0"
iced_futures = "0.7.0"
iced_style = "0.9.0"
